--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -1,64 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-        <!-- build:css({app,.tmp}) /_css/main.css -->
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/_bower_components/skeleton-css/css/normalize.css">
-        <link rel="stylesheet" href="/_bower_components/skeleton-css/css/skeleton.css">
-        <link rel="stylesheet" href="/_css/main.css">
-        <!-- endbuild -->
+    <!-- build:css({app,.tmp}) /_css/main.css -->
+    <link rel="stylesheet" href="/_bower_components/skeleton-css/css/normalize.css">
+    <link rel="stylesheet" href="/_bower_components/skeleton-css/css/skeleton.css">
+    <link rel="stylesheet" href="/_css/main.css">
+    <!-- endbuild -->
+  </head>
+  <body>
 
-    </head>
-    <body>
+    <header>
+      <ul class="menu row">
+        <li class="menu__item"><a class="menu__link" href="/">about</a></li>
+        <li class="menu__item"><a class="menu__link" href="#skills">skills</a></li>
+        <li class="menu__item"><a class="menu__link" href="/projects">projects</a></li>
+        <li class="menu__item"><a class="menu__link" href="/blog">blog</a></li>
+        <li class="menu__item"><a class="menu__link" href="#contact">contact me</a></li>
+      </ul>
+    </header>
 
-        <div class="container">
-          <div>
-            <h1><a href="/">{{ site.name }}</a></h1>
-            <a href="/">home</a> - 
-            <a href="/projects">projects</a> - 
-            <a href="/json">json</a>
-          </div>
-
-          <hr>
-
-          
-          <div class="row">
-            <div class="nine columns">{{ content }}</div>
-            <div class="three columns">
-              {% for post in site.posts %}
-                <a href="{{ post.url }}">{{ post.title }}</a>
-                <p>
-                  <span>{{ post.author }}</span>
-                  <span>{{ post.date }}</span>
-                </p>
-              {% endfor %}
-            </div>
-          </div>
-
-          <hr>
-
-          <div>
-            <div>
-              <p>
-                Pierre Luc Nichols - <a href="mailto:pierrelucnichols@gmail.com">pierrelucnichols@gmail.com</a>
-              </p>
-            </div>
-            <div>
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div>{{ content }}</div>
+      </div>
+      
+      <!-- <div class="row">
+        <div class="nine columns">{{ content }}</div>
+        <div class="three columns">
+          {% for post in site.posts %}
+            <a href="{{ post.url }}">{{ post.title }}</a>
+            <p>
+              <span>{{ post.author }}</span>
+              <span>{{ post.date }}</span>
+            </p>
+          {% endfor %}
         </div>
+      </div> -->
+    </div>
+
+    <footer>
+      <div class="container">
+        <p>Pierre Luc Nichols - <a href="mailto:pierrelucnichols@gmail.com">pierrelucnichols@gmail.com</a></p>
+      </div>
+    </footer>
 
     <!-- build:js(app) /_js/scripts.js -->
     <script src="/_js/main.js"></script>
     <!-- endbuild -->
-    </body>
+  </body>
 </html>
