--- a/app/_scss/_styles.scss
+++ b/app/_scss/_styles.scss
@@ -6,6 +6,56 @@ Styles
 
 
 body {
-	background-color: #f1f1f1;
+    background-color: #666;
 }
 
+.container {
+    max-width: 1200px;
+}
+
+/* For devices larger than 400px */
+@media (min-width: 400px) {
+    .container {
+        width: 95%;
+    }
+}
+
+/* For devices larger than 550px */
+@media (min-width: 550px) {
+    .container {
+        width: 90%; 
+    }
+}
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1;
+    color: #fff;
+}
+
+h1 {
+    font-size: 10em;
+    font-size: 16vw;
+}
+
+h2 {
+    font-size: 8em;
+    font-size: 8.5vw;
+}
+
+h3 {
+    font-size: 6em;
+    font-size: 7vw;
+}
+
+h4 {
+    font-size: 4em;
+    font-size: 3.5vw;
+}
+
+h5 {
+    font-size: 2em;
+}
+
+h5 {
+    font-size: 1.6em;
+}
