--- a/app/_scss/_mixins.scss
+++ b/app/_scss/_mixins.scss
@@ -7,10 +7,9 @@ Mixins
 
 
 // Using media queries with like this:
-// @include media-query($on-palm) {
+// @include media-query($mq-small) {
 //     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
+//         top: 0;
 //     }
 // }
 @mixin media-query($device) {
@@ -18,3 +17,4 @@ Mixins
         @content;
     }
 }
+
