--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -11,10 +11,13 @@
 @import "syntax-highlighting";
 @import "variables";
 @import "mixins";
+@import "utilities";
+@import "icons";
 @import "styles";
-@import "homepage";
-@import "menu";
+@import "header";
 @import "footer";
+@import "homepage";
+@import "hamburger";
 
 
 
