--- a/app/_scss/_variables.scss
+++ b/app/_scss/_variables.scss
@@ -15,10 +15,9 @@ $spacing-unit: 30px;
 $fast-in: cubic-bezier(0.4, 0, 0.2, 1);
 
 // Colors
-$text-color: #111;
-$background-color: #fdfdfd;
+$text-color: #eee;
+$background-color: #666;
 $brand-color: #2a7ae2;
-$grey-color: #828282;
 
 // Width of the content area
 $content-width: 1200px;
