--- a/app/_scss/core/_variables.scss
+++ b/app/_scss/core/_variables.scss
@@ -17,7 +17,7 @@ $fast-in: cubic-bezier(0.4, 0, 0.2, 1);
 // Colors
 $text-color: #eee;
 $background-color: #666;
-$brand-color: #2a7ae2;
+$brand-color: #00A1D6;
 
 // Width of the content area
 $content-width: 1200px;
