Add footer styling and links

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -16,11 +16,11 @@
 
     <header class="header">
       <ul class="header__list row">
-        <li class="header__item"><a class="header__link" href="/">about</a></li>
+        <li class="header__item"><a class="header__link" href="#about">about</a></li>
         <li class="header__item"><a class="header__link" href="#skills">skills</a></li>
-        <li class="header__item"><a class="header__link" href="/projects">projects</a></li>
-        <li class="header__item"><a class="header__link" href="/blog">blog</a></li>
-        <li class="header__item"><a class="header__link" href="#contact">contact me</a></li>
+        <!-- <li class="header__item"><a class="header__link" href="/projects">projects</a></li> -->
+        <!-- <li class="header__item"><a class="header__link" href="/blog">blog</a></li> -->
+        <li class="header__item"><a class="header__link" href="#letstalk">let's talk</a></li>
       </ul>
     </header>
 
@@ -50,7 +50,14 @@
 
     <footer>
       <div class="container">
-        <p>Pierre Luc Nichols - <a href="mailto:pierrelucnichols@gmail.com">pierrelucnichols@gmail.com</a></p>
+        <div class="four columns"><a href="mailto:pierrelucnichols@gmail.com">Pierre Luc Nichols</a> &copy; 2015</div>
+        <div class="four columns social">
+          <a class="social__icon social__icon--linkedin" href="https://uk.linkedin.com/in/pierrelucnichols" title="LinkedIn"></a>
+          <a class="social__icon social__icon--github" href="https://github.com/plnichols/" title="Github"></a>
+          <a class="social__icon social__icon--twitter" href="https://twitter.com/pierrelnichols" title="Twitter"></a>
+        </div>
+        <div class="four columns"><a href="/_pdf/cv_pierreluc_nichols.pdf" target="_blank">download my resume</a></div>
+        
       </div>
     </footer>
 
