--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -23,6 +23,7 @@
 @import "components/hamburger";
 @import "components/separator";
 @import "components/skills";
+@import "components/social";
 
 
 
