--- a/app/_scss/core/_styles.scss
+++ b/app/_scss/core/_styles.scss
@@ -40,7 +40,7 @@ body {
 .container {
     max-width: 1200px;
     @include media-query($mq-xsmall){
-        width: 95%;
+        width: 90%;
     }
     @include media-query($mq-small){
         width: 90%;
@@ -83,3 +83,23 @@ h5 {
 a {
     transition: color 0.1s ease-in;
 }
+
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+    &.button-primary {
+        transition: background-color 0.1s ease-in, border-color 0.1s ease-in;
+        background-color: $brand-color;
+        border-color: $brand-color; 
+        &:hover,
+        &:focus {
+          background-color: darken($brand-color, 5%);
+          border-color: darken($brand-color, 3%); 
+        }
+    }
+}
+
+
+
