--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -6,10 +6,10 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
 
-    <!-- build:css({app,.tmp}) /_css/main.css -->
-    <link rel="stylesheet" href="/_bower_components/skeleton-css/css/normalize.css">
-    <link rel="stylesheet" href="/_bower_components/skeleton-css/css/skeleton.css">
-    <link rel="stylesheet" href="/_css/main.css">
+    <!-- build:css({app,.tmp}) css/main.css -->
+    <link rel="stylesheet" href="bower_components/skeleton-css/css/normalize.css">
+    <link rel="stylesheet" href="bower_components/skeleton-css/css/skeleton.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -18,8 +18,6 @@
       <ul class="header__list row">
         <li class="header__item"><a class="header__link" href="#about">about</a></li>
         <li class="header__item"><a class="header__link" href="#skills">skills</a></li>
-        <!-- <li class="header__item"><a class="header__link" href="/projects">projects</a></li> -->
-        <!-- <li class="header__item"><a class="header__link" href="/blog">blog</a></li> -->
         <li class="header__item"><a class="header__link" href="#letstalk">let's talk</a></li>
       </ul>
     </header>
@@ -33,19 +31,6 @@
       <div class="row">
         {{ content }}
       </div>
-      
-      <!-- <div class="row">
-        <div class="nine columns">{{ content }}</div>
-        <div class="three columns">
-          {% for post in site.posts %}
-            <a href="{{ post.url }}">{{ post.title }}</a>
-            <p>
-              <span>{{ post.author }}</span>
-              <span>{{ post.date }}</span>
-            </p>
-          {% endfor %}
-        </div>
-      </div> -->
     </div>
 
     <footer>
@@ -61,8 +46,8 @@
       </div>
     </footer>
 
-    <!-- build:js(app) /_js/scripts.js -->
-    <script src="/_js/main.js"></script>
+    <!-- build:js(app) js/scripts.js -->
+    <script src="js/main.js"></script>
     <!-- endbuild -->
   </body>
 </html>
