--- a/app/scss/core/_icons.scss
+++ b/app/scss/core/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../_fonts/icomoon.eot?t9r0q1');
-	src:url('../_fonts/icomoon.eot?#iefixt9r0q1') format('embedded-opentype'),
-		url('../_fonts/icomoon.ttf?t9r0q1') format('truetype'),
-		url('../_fonts/icomoon.woff?t9r0q1') format('woff'),
-		url('../_fonts/icomoon.svg?t9r0q1#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?t9r0q1');
+	src:url('../fonts/icomoon.eot?#iefixt9r0q1') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?t9r0q1') format('truetype'),
+		url('../fonts/icomoon.woff?t9r0q1') format('woff'),
+		url('../fonts/icomoon.svg?t9r0q1#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
