--- a/app/scss/components/_separator.scss
+++ b/app/scss/components/_separator.scss
@@ -13,7 +13,7 @@ $separator-color: #777;
     display: block;
     font-size: $separator-size;
     width: 100%;
-    margin: 100px 0;
+    margin: 100px 0 20px;
     color: #fff;
     border-top: 1px solid $separator-color;
     box-sizing: border-box;
@@ -33,5 +33,17 @@ $separator-color: #777;
         line-height: 1.3;
         background-color: $background-color;
         padding-left: 1px;
+    }
+    + h1 {
+        padding-top: 100px;
+    }
+    + h2 {
+        padding-top: 80px;
+    }
+    + h3,
+    + h4,
+    + h5,
+    + h6 {
+        padding-top: 60px;
     }
 }
