Toggle header on menu links click

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -18,7 +18,7 @@
       <ul class="header__list row">
         <li class="header__item"><a class="header__link" href="#about">about</a></li>
         <li class="header__item"><a class="header__link" href="#skills">skills</a></li>
-        <li class="header__item"><a class="header__link" href="#letstalk">let's talk</a></li>
+        <li class="header__item"><a class="header__link" href="#contact">contact</a></li>
       </ul>
     </header>
 
@@ -42,7 +42,7 @@
           <a class="social__icon social__icon--twitter" href="https://twitter.com/pierrelnichols" title="Twitter"></a>
         </div>
         <div class="four columns"><a href="/_pdf/cv_pierreluc_nichols.pdf" target="_blank">download my resume</a></div>
-        
+
       </div>
     </footer>
 
