Complete content for push to live

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -33,16 +33,16 @@
       </div>
     </div>
 
-    <footer>
-      <div class="container">
-        <div class="four columns"><a href="mailto:pierrelucnichols@gmail.com">Pierre Luc Nichols</a> &copy; 2015</div>
-        <div class="four columns social">
-          <a class="social__icon social__icon--linkedin" href="https://uk.linkedin.com/in/pierrelucnichols" title="LinkedIn"></a>
-          <a class="social__icon social__icon--github" href="https://github.com/plnichols/" title="Github"></a>
-          <a class="social__icon social__icon--twitter" href="https://twitter.com/pierrelnichols" title="Twitter"></a>
-        </div>
-        <div class="four columns"><a href="/_pdf/cv_pierreluc_nichols.pdf" target="_blank">download my resume</a></div>
-
+    <footer class="footer">
+      <div class="footer__info">
+        <div>Pierre Luc Nichols &copy; {{site.time | date: "%Y" }}</div>
+        <a class="footer__cv" href="/pdf/cv_pierreluc_nichols.pdf" target="_blank">View my CV</a>
+      </div>
+      <div class="footer__social social">
+        <a class="social__icon social__icon--linkedin" href="https://uk.linkedin.com/in/pierrelucnichols" title="LinkedIn"></a>
+        <a class="social__icon social__icon--github" href="https://github.com/plnichols/" title="Github"></a>
+        <a class="social__icon social__icon--codepen" href="http://codepen.io/plnichols/" title="Codepen"></a>
+        <a class="social__icon social__icon--twitter" href="https://twitter.com/pierrelnichols" title="Twitter"></a>
       </div>
     </footer>
 
