--- a/app/scss/components/_social.scss
+++ b/app/scss/components/_social.scss
@@ -6,18 +6,30 @@ Social
 
 
 .social {
-    margin: 20px 0;
+    margin-top: 20px;
     text-align: center;
+    @include media-query($mq-small) {
+        margin: 0;
+        text-align: right;
+    }
 }
 
 .social__icon {
     font-size: 26px;
     display: inline-block;
     padding: 8px;
-    margin: 5px;
+    margin: 5px 4px;
     color: #fff;
     text-decoration: none;
     height: auto;
+
+    &:first-child {
+        margin-left: 0;
+    }
+    &:last-child {
+        margin-right: 0;
+    }
+
     @extend .icon-extend;
     @extend .button;
     @extend .button-primary;
@@ -27,6 +39,9 @@ Social
     }
     &.social__icon--github {
         @extend .icon-github;
+    }
+    &.social__icon--codepen {
+        @extend .icon-codepen;
     }
     &.social__icon--twitter {
         @extend .icon-twitter;
