--- a/app/scss/core/_styles.scss
+++ b/app/scss/core/_styles.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1080px;
     @include media-query($mq-xsmall){
         width: 90%;
     }
@@ -42,18 +42,29 @@ h1 {
 }
 
 h2 {
-    font-size: 8em;
-    font-size: 8.5vw;
+    font-size: 7em;
+    font-size: 8vw;
 }
 
 h3 {
-    font-size: 5em;
-    font-size: 6vw;
+    font-size: 4.5em;
+    font-size: 5.2vw;
+    line-height: 1.3;
+    @include media-query($mq-large){
+        font-size: 4em;
+        font-size: 4.5vw;
+        line-height: 1.2;
+        padding-bottom: 20px;
+    }
 }
 
 h4 {
-    font-size: 2.5em;
-    font-size: 3vw;
+    font-size: 4em;
+    font-size: 4.5vw;
+    @include media-query($mq-large){
+        font-size: 2.5em;
+        font-size: 3vw;
+    }
 }
 
 h5 {
