--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -22,8 +22,9 @@
 @import "components/homepage";
 @import "components/hamburger";
 @import "components/separator";
-@import "components/skills";
 @import "components/social";
+@import "components/skills";
+@import "components/contact";
 
 
 
