Update JS description and modify headings font-size

--- a/app/scss/components/_contact.scss
+++ b/app/scss/components/_contact.scss
@@ -5,8 +5,12 @@ Contact
 */
 
 
-.contact {
-    h2 {
-        padding-top: 80px;
-    }
+.contact {}
+
+.contact__title {
+    padding-top: 80px;
+}
+
+.contact__btn {
+    margin-top: 20px;
 }
