--- a/app/scss/core/_styles.scss
+++ b/app/scss/core/_styles.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .container {
-    max-width: 1080px;
+    max-width: 880px;
     @include media-query($mq-xsmall){
         width: 90%;
     }
@@ -33,37 +33,68 @@ body {
 h1, h2, h3, h4, h5, h6 {
     line-height: 1;
     color: #fff;
+    margin-bottom: 1rem;
 }
 
 h1 {
-    font-size: 14em;
-    font-size: 16vw;
+    font-size: 5em;
+    font-size: 22vw;
     padding-top: 100px;
+    @include media-query($mq-medium){
+        font-size: 8em;
+        font-size: 16vw;
+    }
+    @include media-query($mq-large){
+        font-size: 12em;
+    }
 }
 
 h2 {
-    font-size: 7em;
-    font-size: 8vw;
+    font-size: 2em;
+    font-size: 9.2vw;
+    @include media-query($mq-small){
+        font-size: 3.4em;
+        font-size: 9.2vw;
+    }
+    @include media-query($mq-medium){
+        font-size: 4.5em;
+        font-size: 9.2vw;
+    }
+    @include media-query($mq-large){
+        font-size: 6em;
+    }
 }
 
 h3 {
-    font-size: 4.5em;
-    font-size: 5.2vw;
+    font-size: 1.5em;
+    font-size: 5.8vw;
     line-height: 1.3;
+    @include media-query($mq-small){
+        font-size: 2.2em;
+        font-size: 5.4vw;
+    }
+    @include media-query($mq-medium){
+        font-size: 2.7em;
+        font-size: 5.4vw;
+    }
     @include media-query($mq-large){
-        font-size: 4em;
-        font-size: 4.5vw;
-        line-height: 1.2;
-        padding-bottom: 20px;
+        font-size: 3.5em;
     }
 }
 
 h4 {
-    font-size: 4em;
-    font-size: 4.5vw;
+    font-size: 1.2em;
+    font-size: 3.8vw;
+    @include media-query($mq-small){
+        font-size: 1.5em;
+        font-size: 3.8vw;
+    }
+    @include media-query($mq-medium){
+        font-size: 1.9em;
+        font-size: 3.8vw;
+    }
     @include media-query($mq-large){
         font-size: 2.5em;
-        font-size: 3vw;
     }
 }
 
