--- a/app/scss/components/_contact.scss
+++ b/app/scss/components/_contact.scss
@@ -11,6 +11,22 @@ Contact
     padding-top: 80px;
 }
 
+.contact__subtitle {
+    font-size: 1em;
+    font-size: 4.8vw;
+    @include media-query($mq-small){
+        font-size: 1.8em;
+        font-size: 4.8vw;
+    }
+    @include media-query($mq-medium){
+        font-size: 2.4em;
+        font-size: 4.6vw;
+    }
+    @include media-query($mq-large){
+        font-size: 3em;
+    }
+}
+
 .contact__btn {
     margin-top: 20px;
 }
